# sentiment_analysis

./: .gitignore  CMakeLists.txt  README.md  data.cpp  data.h  main.cpp  main.py  mod.cpp  stopwords.txt  t.cpp  test.py
header/: classificators.h  data.h  wordMatch.h
models/: model.txt
src/: bindings.cpp  classificators.cpp  data.cpp  main.cpp  wordMatch.cpp
testFile/: CMakeLists.txt  main.cpp  mod.cpp  mod.ixx  wordMatch.ixx
